--- a/public/pages/header.html
+++ b/public/pages/header.html
@@ -6,30 +6,51 @@
     <title>Maxinutri | Top People </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <script async src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-    <script src="./js/main.js" type="text/javascript" async></script>
-    <link rel="stylesheet" type="text/javascript" href="./css/styles.css">
+    <script src="../js/main.js" type="text/javascript" async></script>
+    <link rel="stylesheet" type="text/css" href="../css/styles.css">
 </head>
 <body>
     <header class="container-fluid">
         <div class="contenedor__header row">
-            <a class="header__logos col-2" target="_blank" href="./index.html">
-                <img src="|" alt="Top People">
-            </a>
-            <a class="header__logos col-2" target="_blank" href="./index.html">
-                <img src="|" alt="Top People">
-            </a>
-            <div class="header__rrss col-2">
-                <a href="www.facebook.com" target="_blank" title="visitanos en facebook">
-                    <img src="|" alt="facebook">
+            <div class="col row justify-content-start">
+                <a class="header__logos col-2" target="_blank" href="./index.html">
+                    <img src="" alt="Top People">
                 </a>
-                <a href="www.instagram.com" target="_blank" title="visitanos en instagram">
-                    <img src="|" alt="facebook">
+                <a class="header__logos col-2" target="_blank" href="./index.html">
+                    <img src="../assets/icons/logo-maxinutri-blanco.png" alt="Maxinutri">
                 </a>
             </div>
         </div>
-        <nav>
+        <div class="contenedor__menu row">
 
-        </nav>
+            <nav class="col row justify-content-start">
+                <a href="../pages/products.html" class="menu__btn col-3">
+                    <p>PRODUCTOS</p>
+                    <div class="btn--barra"></div>
+                </a>
+                <a href="../pages/about.html" class="menu__btn col-3">
+                    <p>NOSOTROS</p>
+                    <div class="btn--barra"></div>
+                </a>
+                <a href="../pages/contact.html" class="menu__btn col-3">
+                    <p>CONTACTO</p>
+                    <div class="btn--barra"></div>
+                </a>
+            </nav>
+
+            <figure class="header__rrss  col-3 row justify-content-end">
+                <a class="col" href="www.facebook.com" target="_blank" title="visitanos en facebook">
+                    <img src="../assets/icons/483484-facebook-logo-media-multimedia-network-social_107702.png" alt="facebook">
+                </a>
+                <a class="col" href="www.instagram.com" target="_blank" title="visitanos en instagram">
+                    <img src="../assets/icons/483476-circle-instagram-media-multimedia-social_107728.png" alt="instagram">
+                </a>
+                <a class="col" href="whatsapp.com" target="_blank" title="contactanos">
+                    <img src="../assets/icons/1024881-whatsapp_107716.png" alt="whatsapp">
+                </a>
+            </figure>
+
+        </div>
     </header>
     
 </body>
