html header,footer y index

--- a/public/pages/footer.html
+++ b/public/pages/footer.html
@@ -11,5 +11,36 @@
 </head>
 <body>
     
+    <footer>
+        <div class="footer__secciones">
+            <ul>
+                <li>Inicio</li>
+                <li>Nuestros productos</li>
+                <li>Nosotros</li>
+                <li>Productos</li>
+                <li>Contactanos</li>
+            </ul>
+        </div>
+        <div class="footer__direccion">
+            <ul>
+                <li>email@maxinutriecuador.com</li>
+                <li>099 999 9999</li>
+                <li>099 999 9999</li>
+                <li>Quito - Ecuador</li>
+                <li><img src="" alt="Whatsapp">Whatsapp</li>
+            </ul>
+        </div>
+        <div class="footer__logo">
+            <div class="logo--img">
+                <img src="" alt="Maxinutri">
+            </div>
+            <div class="footer__rrss">
+                <img src="" alt="Instagram">
+                <img src="" alt="Facebook">
+                <img src="" alt="TikTok">
+            </div>
+        </div>
+    </footer>
+
 </body>
 </html>
