--- a/public/pages/header.html
+++ b/public/pages/header.html
@@ -1,57 +1,63 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maxinutri | Top People </title>
+    <meta name="description" content="Tienda on'line de productos suplementarios para la salud, belleza y un mejor estilo de vida">
+    <meta name="keywords" content="suplementos nutrición belleza salud vida">
+    <meta name="autor" content="AttisDev - Christian Burnham">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <script async src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <script src="../js/main.js" type="text/javascript" async></script>
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
 </head>
 <body>
-    <header class="container-fluid">
-        <div class="contenedor__header row">
-            <div class="col row justify-content-start">
-                <a class="header__logos col-2" target="_blank" href="./index.html">
-                    <img src="" alt="Top People">
-                </a>
-                <a class="header__logos col-2" target="_blank" href="./index.html">
-                    <img src="../assets/icons/logo-maxinutri-blanco.png" alt="Maxinutri">
+    <header>
+        <div class="header__contenedor">
+            <div class="contenedor__llamanos">
+                <a href="">
+                    <div>
+                        <img src="" alt="llamanos">
+                        <p>Escríbenos!!!</p>
+                    </div>
+                    <h3>099 999 9999</h3>
                 </a>
             </div>
+            <div class="contenedor__logos">
+                    <div class="logos">
+                        <a href="">
+                            <img class="animated fadeInDown" alt="Top People">
+                        </a>
+                    </div>
+                    <div class="logos">
+                        <a href="">
+                            <img class="animated fadeInDown" alt="Maxinutri">
+                        </a>
+                    </div>
+            </div>
+            <div class="contenedor__rrss">
+                <ul class="logos__rrss">
+                    <li class="rrss">
+                        <img src="" alt="IG"><a href=""></a>Instagram</a>
+                    </li>
+                    <li class="rrss">
+                        <img src="" alt="FB"><a href=""></a>Facebook</a>
+                    </li>
+                    <li class="rrss">
+                        <img src="" alt="TikTok"><a href=""></a>TikTok</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <div class="contenedor__menu row">
-
-            <nav class="col row justify-content-start">
-                <a href="../pages/products.html" class="menu__btn col-3">
-                    <p>PRODUCTOS</p>
-                    <div class="btn--barra"></div>
-                </a>
-                <a href="../pages/about.html" class="menu__btn col-3">
-                    <p>NOSOTROS</p>
-                    <div class="btn--barra"></div>
-                </a>
-                <a href="../pages/contact.html" class="menu__btn col-3">
-                    <p>CONTACTO</p>
-                    <div class="btn--barra"></div>
-                </a>
-            </nav>
-
-            <figure class="header__rrss  col-3 row justify-content-end">
-                <a class="col" href="www.facebook.com" target="_blank" title="visitanos en facebook">
-                    <img src="../assets/icons/483484-facebook-logo-media-multimedia-network-social_107702.png" alt="facebook">
-                </a>
-                <a class="col" href="www.instagram.com" target="_blank" title="visitanos en instagram">
-                    <img src="../assets/icons/483476-circle-instagram-media-multimedia-social_107728.png" alt="instagram">
-                </a>
-                <a class="col" href="whatsapp.com" target="_blank" title="contactanos">
-                    <img src="../assets/icons/1024881-whatsapp_107716.png" alt="whatsapp">
-                </a>
-            </figure>
-
-        </div>
+        <nav class="menu">
+            <ul class="menu__list">
+                <li class="menu__btn hvr-sweep-to-top"><a href="">INICIO</a></li>
+                <li class="menu__btn hvr-sweep-to-top"><a href="">NOSOTROS</a></li>
+                <li class="menu__btn hvr-sweep-to-top"><a href="">PRODUCTOS</a></li>
+                <li class="menu__btn hvr-sweep-to-top"><a href="">CONTACTO</a></li>
+            </ul>
+        </nav>
     </header>
-    
-</body>
+</body>         
 </html>
