--- a/public/index.html
+++ b/public/index.html
@@ -7,17 +7,100 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <script async src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <script src="./js/main.js" type="text/javascript" async></script>
-    <link rel="stylesheet" type="text/javascript" href="./css/styles.css">
+    <link rel="stylesheet" type="text/css" href="./css/styles.css">
 </head>
-<body>
+<body class="bg-pan-left">
 
     <header>
         <iframe src="./pages/header.html" frameborder="0" scrolling="no" width="100%" height="200"></iframe>
     </header>
     
-    <main>
+    <section id="banner">
+        <div class="contenedor__banner">
+            <div class="banner__img">
+                <img src="" alt="imagen banner">
+            </div>
+            <div class="banner__img">
+                <img src="" alt="imagen banner">
+            </div>
+            <div class="banner__img">
+                <img src="" alt="imagen banner">
+            </div>
+            <div class="banner__img">
+                <img src="" alt="imagen banner">
+            </div>
+        </div>
+        <h1>Maxinutri lo mejor paratu salud!</h1>
+        <button class="btn btn--banner">COMPRAR!</button>
+    </section>
 
+    <main id="servicos">
+        <div>
+            <h2>Mutivitaminicos</h2>
+            <p class="servicios__texto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi laboriosam autem voluptate saepe. Praesentium voluptas delectus numquam modi facilis laudantium minima possimus facere, laboriosam quia perferendis fuga eveniet soluta aperiam.</p>
+            <div class="servicios__img">
+                <img src="" alt="productos">
+            </div>
+            <button class="btn">Ver más productos</button>
+        </div>
+        <div>
+            <h2>Belleza y deporte</h2>
+            <p class="servicios__texto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi laboriosam autem voluptate saepe. Praesentium voluptas delectus numquam modi facilis laudantium minima possimus facere, laboriosam quia perferendis fuga eveniet soluta aperiam.</p>
+            <div class="servicios__img">
+                <img src="" alt="productos">
+            </div>
+            <button class="btn">Ver más productos</button>
+        </div>
+        <div>
+            <h2>Metabolismo</h2>
+            <p class="servicios__texto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi laboriosam autem voluptate saepe. Praesentium voluptas delectus numquam modi facilis laudantium minima possimus facere, laboriosam quia perferendis fuga eveniet soluta aperiam.</p>
+            <div class="servicios__img">
+                <img src="" alt="productos">
+            </div>
+            <button class="btn">Ver más productos</button>
+        </div>
     </main>
+
+    <section id="mas-vendido">
+        <div class="contenedor__masvendidos">
+            <div class="masvendidos__producto">
+                <img src="" alt="">
+                <h3>Produto</h3>
+                <button class="btn">COMPRAR</button>
+            </div>
+            <div class="masvendidos__producto">
+                <img src="" alt="">
+                <h3>Produto</h3>
+                <button class="btn">COMPRAR</button>
+            </div>
+            <div class="masvendidos__producto">
+                <img src="" alt="">
+                <h3>Produto</h3>
+                <button class="btn">COMPRAR</button>
+            </div>
+            <div class="masvendidos__producto">
+                <img src="" alt="">
+                <h3>Produto</h3>
+                <button class="btn">COMPRAR</button>
+            </div>
+            <div class="masvendidos__producto">
+                <img src="" alt="">
+                <h3>Produto</h3>
+                <button class="btn">COMPRAR</button>
+            </div>
+        </div>
+    </section>
+
+    <section id="suscribirse">
+        <div>
+            <h2>Suscróibete a nuestro Newsletter</h2>
+            <p>Recibe directo en tu mail los últimos consejos de salud, belleza y estilo de vida. Ademóas, enterate de las últimas promociones, descuentos y de los mejores productos para tí.</p>
+        </div>
+        <form action="">
+            <input type="mail" name="mail" placeholder="e-mail">
+            <input type="submit" value="Enviar">
+        </form>
+    </section>
 
     <footer>
         <iframe src="./pages/footer.html" frameborder="0" scrolling="no" width="100%" height="200"></iframe>
